add initial functionality which switches between vocab word and definition and removes bullet points in list

--- a/Desktop/flashcards/flashcards.html
+++ b/Desktop/flashcards/flashcards.html
@@ -9,17 +9,28 @@
   </head>
   <body>
   <div class="container">
-    <div class="well">
     <h1>Flashcards</h1>
+    <p>Click on vocab words below to test your knowledge. Clicking on vocab word will display the definition.
     <ul>
-      <li>JavaScript (JS)</li>
-      <li>Operators</li>
+      <div class="showing">
+        <div id="JS">
+          <li>JavaScript (JS)</li>
+        </div>
+        <div id="JSdef">
+          <p>Definition</p>
+        </div>
+      </div>
+      <!-- <li>Operators</li>
+      <p>Definition</p>
       <li>Variables</li>
+      <p>Definition</p>
       <li>Variable naming conventions</li>
+      <p>Definition</p>
       <li>Functions</li>
+      <p>Definition</p>
       <li>Methods</li>
+      <p>Definition</p> -->
     </ul>
-  </div>
   </div>
   </body>
 </html>
