update id and classes for vocab words and add third vocab word to list

--- a/Desktop/flashcards/flashcards.html
+++ b/Desktop/flashcards/flashcards.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap-theme.css" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Flashcards</title>
   </head>
   <body>
-  <div class="container">
-    <h1>Flashcards</h1>
-    <p>Click on vocab words below to test your knowledge. Clicking on vocab word will display the definition.
-    <ul>
-      <div class="showing">
-        <div id="JS">
-          <li>JavaScript (JS)</li>
+    <div class="container">
+      <h1>Flashcards</h1>
+      <p>Click on vocab words below to test your knowledge. Clicking on vocab word will display the definition. Clicking again will bring you back to the vocab word. Have fun!</p>
+        <div class="JS">
+          <div id="JS">JavaScript</div>
+          <span id="JSdef">an object-oriented computer programming language commonly used to create interactive effects within web browsers.</span>
         </div>
-        <div id="JSdef">
-          <p>Definition</p>
+
+        <div class="Operators"
+        <div id="Operators">Operators</div>
+          <span id="Operatorsdef">a symbol that is used to perform an operation. Most often these operations are arithmetic (addition, subtraction, etc), but not always.</span>
         </div>
-      </div>
-      <!-- <li>Operators</li>
-      <p>Definition</p>
-      <li>Variables</li>
-      <p>Definition</p>
-      <li>Variable naming conventions</li>
-      <p>Definition</p>
-      <li>Functions</li>
-      <p>Definition</p>
-      <li>Methods</li>
-      <p>Definition</p> -->
-    </ul>
-  </div>
+
+        <div class="Vocab"
+        <div id="Vocab">Vocab</div>
+          <span id="Vocabdef">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</span>
+        </div>
+    </div>
   </body>
 </html>
